Fix header on mobile

--- a/pydrill/less/style.less
+++ b/pydrill/less/style.less
@@ -129,8 +129,9 @@
 }
 
 .score {
-  .make-xs-column-offset(7);
-  .make-xs-column(1);
+  .make-xs-column-offset(4);
+  .make-xs-column(4);
+  text-align: right;
   padding-right: 10px;
 }
 
